# Aura

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
aura/: CMakeLists.txt
aura/core/: CMakeLists.txt  info.hpp.in
aura/core/include/Aura/Core/: environment.hpp  nucleus.hpp  render.hpp  settings.hpp  types.hpp  ui.hpp
aura/core/include/Aura/Core/Environment/: structures.hpp
aura/core/include/Aura/Core/Render/: structures.hpp
aura/core/include/Aura/Core/Utilities/: info.hpp  rng.hpp  thread_pool.hpp
aura/core/shaders/: CMakeLists.txt  colour.comp  colour_and_scatter.comp  intersect.comp  old.comp  post-process.comp  pre-process.comp  ray-gen.comp  ray-gen_f.comp  ray-gen_test.comp  scatter.comp  vertex.comp
aura/core/source/: environment.cpp  nucleus.cpp  render.cpp  ui.cpp
aura/core/source/Environment/: what.cpp  what.hpp
aura/core/source/Render/: compute.hpp  framework.hpp  ray-tracer.cpp  ray-tracer.hpp  swapchain.hpp  tmp.cpp
aura/core/source/UI/: window.cpp  window.hpp
aura/include/Aura/: api.hpp  engine.hpp
aura/source/: engine.cpp
tests/: CMakeLists.txt
tests/models/: CMakeLists.txt
tests/source/: main.cpp
